syntax = "proto2";

message ModbusGatewayConfig {
  required bool enabled = 1 [default = false];

  required uint32 tcp_port = 2 [default = 502];
  required uint32 tcp_timeout = 3 [default = 1];

  required uint32 rtu_baud_rate = 4 [default = 115200];
  required uint32 rtu_data_bits = 5 [default = 3];
  required uint32 rtu_parity = 6 [default = 0];
  required uint32 rtu_stop_bits = 7 [default = 1];
  required uint32 rtu_timeout = 8 [default = 1];
}
